--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,10 @@
       ul {
         list-style: none;
       }
+      a {
+        text-decoration: none;
+        margin-left: 10px;
+      }
     </style>
     <script src="popup.js"></script>
   </head>
